--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "neuigkeiten",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
