--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "devstart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mammut333/mannis_news"
+    },
   "keywords": [],
   "author": "Manni",
   "license": "ISC",
